fix(): Change line-eight of heading, align symbol to right

--- a/src/_sass/components/_search.scss
+++ b/src/_sass/components/_search.scss
@@ -4,4 +4,8 @@
   @include breakpoint(large up)  {
     display: block;
   }
+
+  &--mobile {
+    display: block;
+  }
 }
